# gpu_sample_code

./: README.md
arr_derived_openacc/: .gitignore  build_all.sh  build_cray.sh  build_gnu.sh  build_pgi.sh  build_tests.sh  clean_all.sh  make_all.sh  make_cray.sh  make_gnu.sh  make_pgi.sh  print_a.cpp  print_a.h  submit_cpu.slurm  submit_gpu.slurm  test_array_derived_type_v1.f90  test_array_derived_type_v2.f90  test_array_derived_type_v3.f90  test_array_derived_type_v4.f90  test_array_derived_type_v5.f90
cuda/: CMakeLists.txt  Readme.md  main.cu
detect_cuda/: CMakeLists.txt  Readme.md  main.cu
mpi_openacc/: clean.sh  compile_cray.sh  compile_pgi.sh  modules_cray.env  modules_pgi.env  mpi_gather_openacc.f90  mpi_openacc.f90  run.sh
openacc_cuda_sample/: CMakeLists.txt  README.md  cray.cmake  gnu.cmake  pgi.cmake
openacc_cuda_sample/src/: m_parameterizations.f90  main.f90
test_openacc/: README.md  test_array_derived_pointer.f90  test_derived_type_wpointer.f90
